--- a/mister-backup.ini
+++ b/mister-backup.ini
@@ -1,8 +1,8 @@
 ###############################################################################
 #
-# MiSTer Backup system configuration
+# MiSTer Backup Script Configuration
 #
 ###############################################################################
 
-# MiSTer SD Backup Destination
+# Backup Destination
 BACKUP_DESTINATION="/media/usb0/backup/"
